--- a/regra5.html
+++ b/regra5.html
@@ -14,7 +14,8 @@
             </p>
         </div>
         <div>
-            <p style="text-align: center;"><a href="regra4.html">Regra 4</a>                              <a href="regrasestiqueta.html">Pagina Inicial</a></p>
+            <p style="text-align: center;"><a href="regra4.html">Regra 4</a>
+                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;<a href="regrasestiqueta.html">Pagina Inicial</a></p>
         </div>
     </body>
     
