--- a/regra2.html
+++ b/regra2.html
@@ -12,9 +12,8 @@
                 ligue para o paciente e lhe pergunte se ele está disposto a receber visitas.
             </p>
         </div>
-        <div>
-            <p style="text-align: center;"><a href="regra1.html">Regra 1</a>
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;<a href="regra3.html">Regra 3</a></p>
+        <div style="display: flex; flex-direction: row; justify-content: center;">
+            <p><a href="regra1.html">Regra 1</a><p style="width: 30em;"></p><a href="regra3.html">Regra 3</a></p>
         </div>
     </body>
     
