--- a/regra3.html
+++ b/regra3.html
@@ -13,9 +13,8 @@
                  dormir ou ficando cansada, mesmo que esteja há pouco tempo com ela, despeça-se e visite-a noutro dia.
             </p>
         </div>
-        <div>
-            <p style="text-align: center;"><a href="regra2.html">Regra 2</a>
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;<a href="regra4.html">Regra 4</a></p>
+        <div style="display: flex; flex-direction: row; justify-content: center;">
+            <p><a href="regra2.html">Regra 2</a><p style="width: 30em;"></p><a href="regra4.html">Regra 4</a></p>
         </div>
     </body>
     
