--- a/regra1.html
+++ b/regra1.html
@@ -12,9 +12,8 @@
                 entre em contato com a família da pessoa ou o hospital para saber se, e quando, você pode visitar a pessoa internada.
             </p>
         </div>
-        <div>
-            <p style="text-align: center;"><a href="regrasestiqueta.html">Pagina Inicial</a>
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;<a style="text-indent: 30ch;" href="regra2.html">Regra 2</a></p>
+        <div style="display: flex; flex-direction: row; justify-content: center;">
+            <p><a href="regrasestiqueta.html">Pagina Inicial</a><p style="width: 30em;"></p><a href="regra2.html">Regra 2</a></p>
         </div>
     </body>
     
