--- a/regra4.html
+++ b/regra4.html
@@ -12,9 +12,8 @@
                  sendo uma pessoa positiva, cordial, simpática - não dê ao paciente notícias perturbadoras. Anime sempre a pessoa, 
                  mesmo que ela seja negativa.</p>
         </div>
-        <div>
-            <p style="text-align: center;"><a href="regra3.html">Regra 3</a>
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;<a href="regra5.html">Regra 5</a></p>
+        <div style="display: flex; flex-direction: row; justify-content: center;">
+            <p><a href="regra3.html">Regra 3</a><p style="width: 30em;"></p><a href="regra5.html">Regra 5</a></p>
         </div>
     </body>
     
