--- a/ex5.html
+++ b/ex5.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <div class="parent">
-        <div class="div1"> <img src="https://picsum.photos/id/1/450/300?random=1" alt=""></div>
-        <div class="div2"> <img src="https://picsum.photos/id/1/450/300?random=2" alt=""></div>
-        <div class="div3"> <img src="https://picsum.photos/id/1/450/300?random=3" alt=""></div>
-        <div class="div4"> <img src="https://picsum.photos/id/1/450/300?random=4" alt=""></div>
-        <div class="div5"> <img src="https://picsum.photos/id/1/200/300?random=5" alt=""></div>
-        <div class="div6"> <img src="https://picsum.photos/id/1/200/300?random=6" alt=""> </div>
-        <div class="div7"> <img src="https://picsum.photos/id/1/200/300?random=7" alt=""></div>
-        <div class="div8"> <img src="https://picsum.photos/id/1/200/300?random=8" alt=""></div>
-        <div class="div9"> <img src="https://picsum.photos/id/1/200/300?random=9" alt=""></div>
-        <div class="div10"> <img src="https://picsum.photos/id/1/600/300?random=10" alt=""></div>
-        <div class="div11"> <img src="https://picsum.photos/id/1/600/300?random=11" alt=""> </div>
-        <div class="div12"> <img src="https://picsum.photos/id/1/600/300?random=12" alt=""></div>
+        <div class="div1"> <img src="https://picsum.photos/450/300?random=1" alt=""></div>
+        <div class="div2"> <img src="https://picsum.photos/450/300?random=2" alt=""></div>
+        <div class="div3"> <img src="https://picsum.photos/450/300?random=3" alt=""></div>
+        <div class="div4"> <img src="https://picsum.photos/450/300?random=4" alt=""></div>
+        <div class="div5"> <img src="https://picsum.photos/300/300?random=5" alt=""></div>
+        <div class="div6"> <img src="https://picsum.photos/300/300?random=6" alt=""> </div>
+        <div class="div7"> <img src="https://picsum.photos/300/300?random=7" alt=""></div>
+        <div class="div8"> <img src="https://picsum.photos/300/300?random=8" alt=""></div>
+        <div class="div9"> <img src="https://picsum.photos/300/300?random=9" alt=""></div>
+        <div class="div10"> <img src="https://picsum.photos/600/300?random=10" alt=""></div>
+        <div class="div11"> <img src="https://picsum.photos/600/300?random=11" alt=""> </div>
+        <div class="div12"> <img src="https://picsum.photos/600/300?random=12" alt=""></div>
         </div>
 </body>
 </html>
